--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,2 +1,2 @@
 backend_url = http://localhost:3030
-sentiment_analyzer_url = https://sentianalyzer.1y8xaplaykjr.us-south.codeengine.appdomain.cloud/analyze/Fantastic%20services/
+sentiment_analyzer_url = https://sentianalyzer.1y8xaplaykjr.us-south.codeengine.appdomain.cloud/
