--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -54,6 +54,6 @@ jobs:
 
       - name: Run Linter
         run: |
-          # This command finds all JavaScript files recursively and runs JSHint on them
-          find ./server/database -name "*.js" -exec jshint {} +
+          # This command finds all JavaScript files recursively excluding node_modules and runs JSHint on them
+          find ./server/database -name "*.js" -not -path "*/node_modules/*" -exec jshint {} +
           echo "Linted all the js files successfully"
