--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -55,5 +55,5 @@ jobs:
       - name: Run Linter
         run: |
           # This command finds all JavaScript files recursively excluding node_modules and runs JSHint on them
-          find ./server/database -name "*.js" -not -path "*/node_modules/*" -exec jshint {} +
+          find ./server/database -maxdepth 1 -name "*.js" -exec jshint {} +
           echo "Linted all the js files successfully"
